# air-quality-forecast

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_pipeline.yml
config/: config.yaml
src/: database.py  utils.py
src/feature_pipeline/: extract.py  extraction.py  load.py  main.py  transform.py
src/frontend/: app.py
src/inference_pipeline/: main.py  model_loader.py  prediction_database.py
src/training_pipeline/: data.csv  evaluator.py  experiment_logger.py  main.py  models.py  splitter.py
tests/: test_database.py  test_utils.py
tests/feature_pipeline/: test_load.py  test_transform.py
tests/test_feature_pipeline/: test_extract.py  test_load.py  test_transform.py
tests/test_inference_pipeline/: test_model_loader.py
tests/test_training_pipeline/: test_models.py  test_splitter.py
tests/training_pipeline/: test_evaluator.py  test_experiment_logger.py  test_splitter.py
