[tool.poetry]
name = "air-quality-forecast"
version = "0.1.0"
description = ""
authors = ["baniasbaabe <72874670+baniasbaabe@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^3.4.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-randomly = "^3.15.0"
pytest-instafail = "^0.5.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.linters]
optional = true

[tool.poetry.group.linters.dependencies]
mypy = "^1.5.1"
interrogate = "^1.5.0"
bandit = "^1.7.5"
ruff = "^0.0.292"

[tool.poetry.group.fixers]
optional = true

[tool.poetry.group.fixers.dependencies]
black = "^23.9.1"
docformatter = "^1.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
